<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky"
    android:orientation="vertical">

    <TextView
        android:id="@+id/i_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textSize="55sp"
        android:textColor="@color/white"
        android:text="@string/no_internet"/>

    <TextView
        android:id="@+id/dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/start"
        android:textAlignment="center"
        android:layout_marginRight="36dp"
        android:layout_marginLeft="36dp"
        android:layout_below="@id/i_title"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:text="@string/text_1"/>

    <TextView
        android:id="@+id/is_net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_btn"
        android:textColor="@color/white"
        android:paddingHorizontal="@dimen/start"
        android:paddingVertical="7dp"
        android:text="@string/change_state_internet"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/call_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/bottom"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:paddingHorizontal="55dp"
        android:paddingVertical="7dp"
        android:text="@string/call_by_phone"
        tools:targetApi="o" />

</RelativeLayout>
