<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/start"
        android:paddingHorizontal="@dimen/little"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:visibility="visible"
        tools:ignore="UnusedAttribute">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:background="@drawable/round"
            android:paddingVertical="@dimen/start"
            android:paddingHorizontal="@dimen/top"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/to_sign_in"
            style="?android:textAppearanceSmall"
            android:background="@drawable/round_btn"
            android:paddingVertical="@dimen/start"
            android:paddingHorizontal="@dimen/top"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:ignore="UnusedAttribute"
            android:text="@string/sign_in" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verify_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/start"
        android:paddingHorizontal="@dimen/little"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:visibility="gone"
        tools:ignore="UnusedAttribute">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/codeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:ems="10"
                android:hint="@string/code"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/verifyButton"
            style="?android:textAppearanceSmall"
            android:background="@drawable/round"
            android:paddingVertical="@dimen/start"
            android:paddingHorizontal="@dimen/top"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute"
            android:text="@string/verify_code"/>

        <Button
            android:id="@+id/resendButton"
            style="?android:textAppearanceSmall"
            android:background="@drawable/round"
            android:paddingVertical="@dimen/start"
            android:paddingHorizontal="@dimen/top"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute"
            android:text="@string/resend_code" />


    </LinearLayout>
</LinearLayout>
