<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:padding="@dimen/start"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/start"
        android:paddingHorizontal="@dimen/little"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:visibility="visible"
        tools:ignore="UnusedAttribute,UselessParent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit_button"
            style="?android:textAppearanceSmall"
            android:background="@drawable/round"
            android:paddingVertical="@dimen/start"
            android:paddingHorizontal="@dimen/top"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_password"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</LinearLayout>